// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox renders CheckBox correctly 1`] = `
<styled.div
  className="myClass"
  id="checkbox1"
  style={
    Object {
      "color": "blue",
    }
  }
>
  <styled.div
    disabled={true}
    onClick={[Function]}
  >
    <styled.div
      checked={true}
    >
      check_box
    </styled.div>
    <Label
      className=""
      disabled={true}
      primaryColor="#2d2d2d"
      style={
        Object {
          "minWidth": "unset",
        }
      }
      width={150}
    >
      This is CheckBox 1
    </Label>
  </styled.div>
</styled.div>
`;

exports[`CheckBox renders CheckboxGroup correctly 1`] = `
<Checkbox
  className="myClass"
  dataLabel="plan"
  horizontal={true}
  id="checkbox1"
  onChange={[MockFunction]}
  selectedChecks={
    Array [
      Object {
        "checked": true,
        "label": "Checkbox1",
        "value": "Checkbox1",
      },
      Object {
        "checked": false,
        "label": "Checkbox2",
        "value": "Checkbox2",
      },
      Object {
        "checked": false,
        "label": "Checkbox3",
        "value": "Checkbox3",
      },
    ]
  }
  spacing={10}
  style={
    Object {
      "color": "blue",
    }
  }
  title="Select a plan"
>
  <styled.div
    className="myClass"
    id="checkbox1"
    style={
      Object {
        "color": "blue",
      }
    }
  >
    <div
      className="sc-dlnjPT duxSQX myClass"
      id="checkbox1"
      style={
        Object {
          "color": "blue",
        }
      }
    >
      <styled.div
        onClick={[Function]}
      >
        <div
          className="sc-hKFyIo bmgVpe"
          onClick={[Function]}
        >
          <styled.div>
            <div
              className="sc-eCApGN jEwlHW"
            >
              check_box_outline_blank
            </div>
          </styled.div>
          <Label
            className=""
            primaryColor="#2d2d2d"
            style={
              Object {
                "minWidth": "unset",
              }
            }
            width={150}
          >
            <styled.div
              className=""
              onClick={[Function]}
              primaryColor="#2d2d2d"
              style={
                Object {
                  "minWidth": "unset",
                }
              }
              width={150}
            >
              <div
                className="sc-gtssRu HIKRA"
                onClick={[Function]}
                style={
                  Object {
                    "minWidth": "unset",
                  }
                }
                width={150}
              />
            </styled.div>
          </Label>
        </div>
      </styled.div>
    </div>
  </styled.div>
</Checkbox>
`;
